--- a/Python_Fundamentals.ipynb
+++ b/Python_Fundamentals.ipynb
@@ -2304,6 +2304,610 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Object Oriented Python\n",
+    "`URL` : https://doc.lagout.org/programmation/python/Python%203%20Object%20Oriented%20Programming%20%5BPhillips%202010-07-26%5D.pdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyFirstClass:\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = MyFirstClass()\n",
+    "b = MyFirstClass()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.MyFirstClass object at 0x0000015390C95EF0>\n",
+      "<__main__.MyFirstClass object at 0x0000015390C95D68>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(a)\n",
+    "print(b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adding Attributes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 4\n",
+      "3 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Point:\n",
+    "    pass\n",
+    "\n",
+    "p1 = Point()\n",
+    "p2 = Point()\n",
+    "\n",
+    "p1.x = 5\n",
+    "p1.y = 4\n",
+    "\n",
+    "p2.x = 3\n",
+    "p2.y = 6\n",
+    "\n",
+    "print(p1.x, p1.y)\n",
+    "print(p2.x, p2.y)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code creates an empty *Point class* with no data or behaviors. Then it creates two instances of that class and assigns each of those instances `x` and `y` coordinates to identify a point in two dimensions.\n",
+    "\n",
+    "All we need to do to assign a value to an attribute\n",
+    "on an object is use the syntax **`<object>.<attribute> = <value>`**. \n",
+    "This is sometimes referred to as **dot notation**. The value can be anything: a Python primitive, a built-in data type, another object. It can even be a function or another class!\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Point:\n",
+    "    def reset(self):\n",
+    "        self.x = 0\n",
+    "        self.y = 0\n",
+    "\n",
+    "p = Point()\n",
+    "p.reset()\n",
+    "print(p.x, p.y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The **`self`** argument to a method is simply a reference to the object that the method\n",
+    "is being invoked on. \n",
+    "We can access attributes and methods of that object as if it were any other object. This is exactly what we do inside the reset method when we set the `x` and `y` attributes of the self object."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What happens if we **forget** to include the `self` argument in our class definition?\n",
+    "\n",
+    "Python will bail with an error message:\n",
+    "\n",
+    "`Traceback (most recent call last):\n",
+    "File \"<stdin>\", line 1, in <module>\n",
+    "TypeError: reset() takes no arguments (1 given)`\n",
+    "\n",
+    "`NOTE:` Just remember that when you see an error\n",
+    "message that indicates missing arguments, the first thing to check is whether you forgot `self` in the method definition."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n",
+      "4.47213595499958\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "class Point:\n",
+    "    def move(self, x, y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "    \n",
+    "    def reset(self):\n",
+    "        self.move(0, 0)\n",
+    "        \n",
+    "    def calculate_distance(self, other_point):\n",
+    "        return math.sqrt(\n",
+    "            (self.x - other_point.x)**2\n",
+    "            + (self.y - other_point.y)**2)\n",
+    "\n",
+    "point1 = Point()\n",
+    "point2 = Point()\n",
+    "\n",
+    "point1.reset()\n",
+    "point2.move(5, 0)\n",
+    "\n",
+    "print(point2.calculate_distance(point1))\n",
+    "\n",
+    "assert (point2.calculate_distance(point1) == \n",
+    "        point1.calculate_distance(point2))\n",
+    "\n",
+    "point1.move(3, 4)\n",
+    "print(point1.calculate_distance(point2))\n",
+    "print(point1.calculate_distance(point1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `assert` function is a simple test tool; the program will bail if the statement after assert is False (or *zero*, *empty*, or *None*). \n",
+    "\n",
+    "In this case, we use it to ensure that the distance is the same regardless of which point called the other point's `calculate_distance` method. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Initializing the object"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we don't explicitly set the `x` and `y` positions on our `Point` object, either using move or by accessing them directly, we have a broken point with no real position. \n",
+    "\n",
+    "What will happen when we try to access it?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'Point' object has no attribute 'y'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-1100d61b3fb5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mpoint\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpoint\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpoint\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0my\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Point' object has no attribute 'y'"
+     ]
+    }
+   ],
+   "source": [
+    "point = Point()\n",
+    "point.x = 5\n",
+    "print(point.x)\n",
+    "print(point.y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this case, it feels like we should have\n",
+    "specified some sort of default value. Perhaps every new object should be `reset()`, by default or maybe it would be nice if we could force the user to tell us what those positions should be when they create the object."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Point:\n",
+    "    def __init__(self, x, y):\n",
+    "        self.move(x, y)\n",
+    "    \n",
+    "    def move(self, x, y):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        \n",
+    "    def reset(self):\n",
+    "        self.move(0, 0)\n",
+    "\n",
+    "# Constructing a point\n",
+    "point = Point(3, 5)\n",
+    "print(point.x, point.y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Most of the time, we put our initialization statements in an **\\__init\\__** function. But as mentioned earlier, **Python has a constructor in addition to its initialization function**. You may never need to use the other Python constructor, but it helps to know it exists.\n",
+    "\n",
+    "The constructor function is called **\\__new\\__** as opposed to **\\__init\\__**, and *accepts exactly one argument*, the class that is being constructed (it is called before the object is constructed, so there is no self argument). It also has to return the newly created object. \n",
+    "\n",
+    "This has interesting possibilities when it comes to the complicated art of meta-programming, but is not very useful in day-to-day programming. In practice, you will rarely, if ever, need to use **\\__new\\__**, and **\\__init\\__** will be sufficient."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basic Inheritance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MySubClass(object):\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Contact:\n",
+    "    all_contacts = []\n",
+    "    \n",
+    "    def __init__(self, name, email):\n",
+    "        self.name = name\n",
+    "        self.email = email\n",
+    "        Contact.all_contacts.append(self)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This example introduces us to **class variables**. The `all_contacts` list, because it is part of the class definition, is actually shared by all instances of this class. This means that there is only one `Contact.all_contacts` list, and if we call `self.all_contacts` on any one object, it will refer to that single list. The code in the initializer ensures that whenever we create a new contact, the list will automatically have the new object added. \n",
+    "\n",
+    "`NOTE`: Be careful with this syntax, for if you ever set the variable using `self.all_contacts`, you will actually be creating a **new** instance variable on the object; the class variable will still be unchanged and accessible as `Contact.all_contacts`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Supplier(Contact):\n",
+    "    def order(self, order):\n",
+    "        print(\"If this were a real system we would send\"\n",
+    "             \"{} order to {}\".format(order, self.name))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Some Body somebody@example.com Sup plier supplier@example.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = Contact(\"Some Body\", \"somebody@example.com\")\n",
+    "s = Supplier(\"Sup plier\", \"supplier@example.com\")\n",
+    "print(c.name, c.email, s.name, s.email)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<__main__.Contact at 0x15390c4f630>, <__main__.Supplier at 0x15390c4fba8>]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.all_contacts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Contact' object has no attribute 'order'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-16-cf8df5c0c8ae>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0morder\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"I Need Pliers\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Contact' object has no attribute 'order'"
+     ]
+    }
+   ],
+   "source": [
+    "c.order(\"I Need Pliers\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "If this were a real system we would send Pliers order to Sup plier\n"
+     ]
+    }
+   ],
+   "source": [
+    "s.order(\" Pliers\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extending built-ins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ContactList(list):\n",
+    "    def search(self, name):\n",
+    "        \"\"\"Return all contacts that contain the search \n",
+    "        value in their name\"\"\"\n",
+    "        matching_contacts = []\n",
+    "        for contact in self:\n",
+    "            if name in contact.name:\n",
+    "                matching_contacts.append(contact)\n",
+    "        return matching_contacts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Contact:\n",
+    "    all_contacts = ContactList()\n",
+    "    \n",
+    "    def __init__(self, name, email):\n",
+    "        self.name = name\n",
+    "        self.email = email\n",
+    "        self.all_contacts.append(self)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c1 = Contact(\"John A\", \"johna@example.net\")\n",
+    "c2 = Contact(\"John B\", \"johnb@example.net\")\n",
+    "c3 = Contact(\"Jenna C\", \"jennac@example.net\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['John A', 'John B']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[c.name for c in Contact.all_contacts.search('John')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LongNameDict(dict):\n",
+    "    def longest_key(self):\n",
+    "        longest = None\n",
+    "        for key in self:\n",
+    "            if not longest or len(key) > len(longest):\n",
+    "                longest = key\n",
+    "        return longest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'longest yet'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "longkeys = LongNameDict()\n",
+    "longkeys['hello'] = 1\n",
+    "longkeys['longest yet'] = 5\n",
+    "longkeys['hello2'] = 'world'\n",
+    "longkeys.longest_key()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Overriding and super"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Contact:\n",
+    "    all_contacts = ContactList()\n",
+    "    \n",
+    "    def __init__(self, name, email):\n",
+    "        self.name = name\n",
+    "        self.email = email\n",
+    "        self.all_contacts.append(self)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overriding is altering or replacing a\n",
+    "method of the superclass with a new method (with the same name) in the subclass. No special syntax is needed to do this; the subclass's newly created method is automatically called instead of the superclass's method. For example:\n",
+    "\n",
+    "`class Friend(Contact):\n",
+    "     def __init__(self, name, email, phone):\n",
+    "         self.name = name\n",
+    "         self.email = email\n",
+    "         self.phone = phone`\n",
+    "\n",
+    "Any method can be overridden, not just **\\__init\\__**. Before we go on, however, we need to correct some problems in this example. Our `Contact` and `Friend` classes have duplicate code to set up the name and email properties; this can make maintenance complicated, as we have to update the code in two or more places.\n",
+    "\n",
+    "More alarmingly, our `Friend` class is neglecting to add itself to the `all_contacts` list we have created on the `Contact` class.\n",
+    "\n",
+    "What we really need is a way to call code on the parent class. This is what the `super` function does: it returns the object as an instance of the parent class, allowing us to call the parent method directly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Friend(Contact):\n",
+    "    def __init(self, name, email, phone):\n",
+    "        super().__init__(name, phone)\n",
+    "        self.phone = phone"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This example first gets the instance of the parent object using `super`, and calls **\\__init\\__** on that object, passing in the expected arguments. It then does its own initialization, namely setting the phone attribute."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -2327,7 +2931,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
